play game is internationalized and shows different games

--- a/src/frontend/public/silent_renew.html
+++ b/src/frontend/public/silent_renew.html
@@ -3,7 +3,7 @@
 <body>
     <script src="oidc-client.min.js"></script>
     <script>
-        (function() {
+        (async function() {
             try {
                 await new Oidc.UserManager().signinSilentCallback();
             } catch(err) {
