--- a/src/frontend/public/login.html
+++ b/src/frontend/public/login.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <body>
     <script src="oidc-client.min.js"></script>
+    <script type="text/javascript" src="global-vars.js"></script>
     <script>
         (async function() {
             const returnUrl = new URLSearchParams(window.location.search).get("ReturnUrl");
@@ -22,7 +23,7 @@
                     if (stateData)
                     {
                         const provider = JSON.parse(stateData).data.provider;
-                        document.location.href = `https://localhost:5000/api/authenticate/externalLogin?provider=${provider}&returnUrl=${encodeURIComponent(returnUrl)}`;
+                        document.location.href = `${globalVars.IdentityServerUri}/api/authenticate/externalLogin?provider=${provider}&returnUrl=${encodeURIComponent(returnUrl)}`;
                         return;
                     }
                 } catch (error) {
